--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,24 @@
         <i class="fa fa-cog" aria-hidden="true"></i>Item</a>
     </nav>
   </section>
+  <header>
+    <div class="search-area">
+        <i class="fa fa-search" aria-hidden="true"></i>
+      <input type="text">
+    </div>
+    <div class="user-area">
+      <a href="#" class="add">+add</a>
+      <a href="#" class="notification">
+          <i class="fa fa-bell-o" aria-hidden="true"></i>
+        <span class="circle">3</span>
+      </a>
+      <a href="#">
+        <div class="user-img"></div>
+        <i class="fa fa-caret-down" aria-hidden="true"></i>
+      </a>
+    </div>
+  </header>
+
 </body>
 
 </html>
