--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,13 @@
   </section>
   <header>
     <div class="search-area">
-        <i class="fa fa-search" aria-hidden="true"></i>
+      <i class="fa fa-search" aria-hidden="true"></i>
       <input type="text">
     </div>
     <div class="user-area">
       <a href="#" class="add">+add</a>
       <a href="#" class="notification">
-          <i class="fa fa-bell-o" aria-hidden="true"></i>
+        <i class="fa fa-bell-o" aria-hidden="true"></i>
         <span class="circle">3</span>
       </a>
       <a href="#">
@@ -44,6 +44,71 @@
       </a>
     </div>
   </header>
+
+  <section id="content-area">
+    <div class="heading">
+      <h1>Dashboard</h1>
+      <p>Welcome to Dashboard</p>
+    </div>
+
+    <div class="cards">
+      <div class="card">
+        <div class="user-img"></div>
+        <span class="user-name">Andy Tsai</span>
+        <span class="user-title">full development</span>
+        <hr>
+        <div class="col-md-4">
+          <span class="education">Education</span>
+        </div>
+        <div class="col-md-4">
+          <span class="schools">CJCU</span>
+          <span class="schools">CJCU</span>
+        </div>
+      </div>
+
+      <div class="card">
+        <h6>Interview Schedule</h6>
+        <span class="date">Jul 7, 2017</span>
+        <div class="col-md-2">
+          <span class="jop-type">IT</span>
+        </div>
+        <div class="col-md-10">
+          <span class="schools">Best Bbuy HQ</span>
+          <span class="schools">Senior develop</span>
+          <span class="time">15:01 pm</span>
+        </div>
+      </div>
+
+    </div>
+
+    <table>
+      <thead>
+        <tr>
+          <th>
+            Company
+          </th>
+          <th>
+            Jobs
+          </th>
+          <th>
+            End of Application
+          </th>
+          <th>
+            Location
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Online Shopping</td>
+          <td>Java Development</td>
+          <td>July 27,2017</td>
+          <td>Taiwan</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </section>
 
 </body>
 
